--- a/app/globals.css
+++ b/app/globals.css
@@ -95,26 +95,129 @@ gap: 5px
 .unimartheroicon {
   width: 370px;
 }
+.category-container {
+  width: 90vw;
+  margin: 0px auto;
+  position: relative;
+}
+/* category homepage styling */
+.homepage-category {
+  display: flex;
+  justify-content: center;
+  margin: 50px auto;
+width: 90vw;
+overflow-x: hidden;
+}
+.rightcategory,.leftcategory {
+  position: absolute;
+  width: 40px;
+  right: -18px;
+  z-index: 3;
+  top: 130px;
+}
+.leftcategory {
+  left: -18px;
+}
+
+/* trednding ads */
+.trendingadborder {
+  width: 40vw;
+  border-bottom: 2px solid #FF5208;
+}
+.trendingadtextcontainer {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-block: 20px;
+  padding: 0px 18%;
+}
+.trendingadscont {
+display: grid;
+padding: 10px 6%;
+gap: 30px;
+grid-template-columns: repeat(4, auto);
+
+}
+.trendingadsbox {
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.29);
+  width: 20vw;
+  height: 40vh;
+  position: relative;
+}
+.ad-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+  background-color: red;
+}
+.productinfo {
+  background: #FFFFFF;
+backdrop-filter: blur(2px);
+display: flex;
+align-items: flex-end;
+gap: 10px;
+/* Note: backdrop-filter has minimal browser support */
+border: 1px solid black;
+position: absolute;
+width: 100%;
+bottom:0px;
+padding: 10px;
+padding-left: 20px;
+border-radius: 50px 0px 10px;
+}
+.productname {
+  color: #FF5208;
+  font-weight: 600;
+  font-size: 14px;
+}
 .footer-container {
   background-color: #3300FF;
   width: 100%;
   color: #ffffff;
+  font-size: 14px;
+  padding: 10px 6%;
 }
-.svgfooterimgs-cont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .svgfooterimgs {
-width: 70vw;
+width: 100%;
+height: 230px;
 }
 .footerinfocont {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   gap: 9%;
+  margin-top: 15px;
 }
+.footerinfocont ul li {
+  margin-block: 14px;
+  cursor: pointer;
+  }
+  .footer1ul {
+    font-weight: 700;
+    font-size: 14px;
+  }
+  .footersmallfont {
+    font-size: 11px;
+  }
 .footer-social-mediaicons {
+  display: flex;
+  gap: 17px;
+  cursor: pointer;
+margin-top: 10px;
+
+}
+
+.footer-copyright {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+width: 71.5vw;
+margin-top: 20px;
+margin-left: auto;
+}
+.foot-c {
   display: flex;
   gap: 10px;
 }
