--- a/app/globals.css
+++ b/app/globals.css
@@ -10,14 +10,27 @@
 .unimart-logo {
   width: 170px;
 }
-.navbar {
+.nav {
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  z-index: 8;
+}
+.main-nav {
+ 
+
+
   background: #ffffff;
   box-shadow: 0px 2px 50px rgba(51, 0, 255, 0.11);
   border-radius: 5px;
+  padding: 10px 6%;
+}
+.navbar {
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 6%;
+
 }
 .navbar-search {
   border: none;
@@ -29,11 +42,15 @@
   border-bottom: 2px solid #3300ff;
   font-size: 12px;
 }
-.nav-input-search-cont {
+.nav-input-search-cont, .nav-input-search-cont1 {
   width: 40vw;
   position: relative;
   filter: drop-shadow(0px 1px 5px rgba(0, 0, 0, 0.15));
   border-radius: 5px;
+}
+.nav-input-search-cont1 {
+  width: unset;
+  display: none;
 }
 .nav-search-icon {
   position: absolute;
@@ -67,10 +84,11 @@
 }
 .hero-container {
   display: flex;
+  padding-top: 15vh;
   align-items: center;
-  margin-top: 50px;
   justify-content: center;
-  gap: 70px;
+  gap: 10%;
+  margin: 50px 6%;
 }
 .herosellcont {
   display: flex;
@@ -106,7 +124,7 @@
 .animateconnect{
   position: relative;
   animation-name: animeconnect;
-  animation-duration: 1s;
+  animation-duration: 4s;
   animation-direction: normal;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
@@ -114,7 +132,7 @@
 @keyframes animeconnect  {
   0% {
     position: relative;
-    left: 1900px;
+    left: 900px;
   }
 
  
@@ -217,6 +235,7 @@
 .trendingadsbox {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.29);
   width: 20vw;
+  cursor: pointer;
   height: 40vh;
   position: relative;
   border-radius: 0px 0px 10px 0px;
@@ -332,7 +351,69 @@
   gap: 10px;
 }
 
+.hambugger-nav {
+  display: none;
+  cursor: pointer;
+}
+.nav-bar {
+  width: 24px;
+  height: 3px;
+  background-color: #3300ff;
+  border-radius: 10px;
+  margin-block:5px;
+}
+@media (max-width: 850px) {
+  .nav-input-search-cont {
+    display: none;
+  }
+  .nav-input-search-cont1 {
+    margin-top: 10px;
+    display: block;
+  }
+  .navbar-search {
+    padding: 8px 10px;
+  }
+  .nav-search-icon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+  .trendingadscont {
+    padding: 10px 6%;
 
-@media (max-width: 900p {
-  
+    grid-template-columns: repeat(2, auto);
+  }
+  .trendingadsbox {
+    width: 100%;
+
+  }
+  .hero-container {
+gap: unset;
+    justify-content: space-between;
+    margin: 50px 6%;
+  }
+  .hero-btn-cont {
+    display: block;
+  }
+  .herosellcont {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 500px) {
+  .hero-container {
+    display: block;
+
+  }
+  .navlogin {
+    display: block;
+  } 
+  .trendingadscont {
+grid-template-columns: repeat(1, auto);
+  }
+  .hambugger-nav {
+    display: block;
+  }
+  .nav-logincont {
+    display: none;
+  }
 }
