--- a/app/globals.css
+++ b/app/globals.css
@@ -236,7 +236,6 @@
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.29);
   width: 20vw;
   cursor: pointer;
-  height: 40vh;
   position: relative;
   border-radius: 0px 0px 10px 0px;
 }
@@ -288,6 +287,13 @@
   color: #ff5208;
   font-weight: 600;
   font-size: 14px;
+
+    white-space: nowrap; /* Prevents text from wrapping */
+    overflow: hidden; /* Hides any overflowing text */
+    text-overflow: ellipsis; /* Adds ellipsis (...) to indicate truncated text */
+    width: 95%; /* Sets the width of the paragraph element */
+  
+  
 }
 .productprice {
   color: #000000;
@@ -366,6 +372,7 @@
   .nav-input-search-cont {
     display: none;
   }
+
   .nav-input-search-cont1 {
     margin-top: 10px;
     display: block;
@@ -385,6 +392,8 @@
   }
   .trendingadsbox {
     width: 100%;
+    height: unset;
+    height: 100%;
 
   }
   .hero-container {
@@ -407,13 +416,34 @@ gap: unset;
   .navlogin {
     display: block;
   } 
-  .trendingadscont {
-grid-template-columns: repeat(1, auto);
-  }
   .hambugger-nav {
     display: block;
   }
   .nav-logincont {
     display: none;
   }
+  .bookmark {
+    position: absolute;
+    right: 9px;
+    top: 11vh;
+    width: 25px;
+    z-index: 3;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.29);
+  }
+.productinfo {
+  padding: 3px 15px;
+ }
+ .productabbreviaton {
+  display: none;
+ }
+ .productuniversity {
+  white-space: nowrap; /* Prevents text from wrapping */
+  overflow: hidden; /* Hides any overflowing text */
+  text-overflow: ellipsis; /* Adds ellipsis (...) to indicate truncated text */
+  width: 83%;
+
+ }
+ .universitycont {
+  font-size: 8px;
+ }
 }
