--- a/app/globals.css
+++ b/app/globals.css
@@ -14,11 +14,9 @@
   width: 100%;
   position: fixed;
   top: 0px;
-  z-index: 8;
+  z-index: 4;
 }
 .main-nav {
- 
-
 
   background: #ffffff;
   box-shadow: 0px 2px 50px rgba(51, 0, 255, 0.11);
@@ -223,7 +221,7 @@
   align-items: center;
   gap: 20px;
   margin-block: 20px;
-  padding: 0px 18%;
+  padding: 0px 6%;
 }
 
 .trendingadscont {
@@ -358,15 +356,52 @@
 }
 
 .hambugger-nav {
+  z-index: 6;
   display: none;
   cursor: pointer;
 }
-.nav-bar {
-  width: 24px;
+ 
+.nav-bar,
+  .bar-active {
+    width: 24px;
   height: 3px;
   background-color: #3300ff;
   border-radius: 10px;
   margin-block:5px;
+  transition: all 0.3s ease-in-out;
+}
+ 
+
+  .bar-active:nth-of-type(1) {
+    transform: rotate(50deg) translateY(-7px) translateX(5px);
+    width: 27px;
+  }
+  .bar-active:nth-of-type(2) {
+    display: none;
+  }
+  .bar-active:nth-of-type(3) {
+    transform: rotate(128deg) translateX(-12px);
+    width: 27px;
+  }
+
+.showmenu, .showmenuactive {
+  position: fixed;
+z-index: 5;
+  top: 0px;
+  right: -800px;
+  width: 100%;
+  height: 100vh;
+  background-color:rgba(0, 0, 0, 0.15);
+  transition: all 0.3s ease-in-out;
+}
+.showmenuactive {
+  right: 0px;
+}
+.mainshow {
+  width: 80%;
+  height: 100%;
+  margin-left: auto;
+  background-color: #ffffff;
 }
 @media (max-width: 850px) {
   .nav-input-search-cont {
@@ -412,6 +447,9 @@ gap: unset;
   .hero-container {
     display: block;
 
+  }
+  .footer-social-mediaicons {
+    display: none;
   }
   .navlogin {
     display: block;
