--- a/app/globals.css
+++ b/app/globals.css
@@ -401,7 +401,11 @@ z-index: 5;
   width: 80%;
   height: 100%;
   margin-left: auto;
+  padding: 20% 10% ;
   background-color: #ffffff;
+}
+.nav-logincont1 div {
+  margin-block: 15px;
 }
 @media (max-width: 850px) {
   .nav-input-search-cont {
