--- a/app/globals.css
+++ b/app/globals.css
@@ -182,7 +182,7 @@ html {
   align-items: center;
   margin: 50px auto;
   width: 90vw;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
 }
 .rightcategory,
@@ -389,7 +389,7 @@ html {
   position: fixed;
   z-index: 5;
   top: 0px;
-  right: -800px;
+  right: -1800px;
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.15);
@@ -501,7 +501,10 @@ html {
   .home-cat {
     min-width: 20rem;
     height: 20rem;
-    scale: unset;
+    transform: unset;
     scroll-snap-align: center;
+  }
+  .unimartheroicon {
+    display: none;
   }
 }
