--- a/app/globals.css
+++ b/app/globals.css
@@ -420,6 +420,7 @@ html {
   align-items: center;
 }
 .signuplogo {
+  display: none;
   position: absolute;
   top: 20px;
   left: 9%;
@@ -580,11 +581,12 @@ html {
   background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(51, 0, 255, 0.425);
 }
+
 .create-account-btn {
   background-color: #3300ff;
-  width: 35%;
+  width: 45%;
   text-align: center;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
   margin-top: 20px;
   padding: 8px 16px;
@@ -597,7 +599,32 @@ html {
   .nav-input-search-cont {
     display: none;
   }
-
+.main-user-login {
+  display: block;
+}
+.mainuser-img-cont {
+  display: none;
+}
+.user-info-cont {
+  height: 100vh;
+  flex-basis: unset;
+  width: unset;
+  
+}
+.signupform {
+  max-width: unset;
+  max-width: 60vw;
+}
+.create-account-btn {
+  width: 100%;
+}
+.switch-user-info {
+  top: unset;
+  bottom: 12%;
+  right: unset;
+  margin: 0px auto;
+  
+}
   .nav-input-search-cont1 {
     margin-top: 10px;
     display: block;
@@ -630,6 +657,9 @@ html {
   }
   .herosellcont {
     margin-bottom: 10px;
+  }
+  .signuplogo {
+    display: block;
   }
 }
 @media (max-width: 500px) {
@@ -691,5 +721,11 @@ html {
   }
   .unimartheroicon {
     display: none;
+  }
+  .signupform {
+    max-width: 80vw;
+  }
+  .signup-name-flex {
+    display: block;
   }
 }
